# devnet-faucet

./: .gitignore
qf-faucet-server/: Cargo.toml  README.md  metadata.scale
qf-faucet-server/src/: main.rs
src/components/: Faucet.jsx
