[package]
authors = ["Max Pestov <ealataur@gmail.com>"]
name = "qf-faucet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
subxt = { version = "0.39.0", features = ["tokio"] }
subxt-codegen = "0.39.0"
subxt-signer = "0.39.0"
clap = { version = "4.5.30", features = ["derive"]}
hex = "0.4.3"
rusqlite = "0.33.0"
chrono = "0.4.39"
